--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -59,7 +59,7 @@
             <form
               name="reserve"
               action="index.html"
-              method="post"
+              method="get"
               id="form"
             >
               <div
@@ -98,6 +98,8 @@
                 <input
                   class="text-control"
                   type="date"
+                  min="1930-01-01"
+                  max="2009-12-31"
                   id="birthdate"
                   name="birthdate"
                 /><span id="birthdateError"></span><br>
